--- a/index.html
+++ b/index.html
@@ -7,233 +7,204 @@
 
 <style>
 body {
-    margin: 0;
-    background: #000;
-    font-family: Arial, sans-serif;
-    color: #fff;
+    background:#000;
+    color:#fff;
+    font-family:Arial, sans-serif;
+    margin:0;
 }
-
 header {
-    background: #000;
-    border-bottom: 2px solid #facc15;
-    padding: 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding:12px;
+    border-bottom:2px solid #facc15;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
 }
-
 header h1 {
-    color: #facc15;
-    font-size: 20px;
-    margin: 0;
+    color:#facc15;
+    font-size:20px;
+    margin:0;
 }
-
-.menu button {
-    background: #facc15;
-    border: none;
-    padding: 8px 12px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 6px;
+button {
+    width:100%;
+    padding:12px;
+    margin-top:8px;
+    border:none;
+    border-radius:8px;
+    font-weight:bold;
+    cursor:pointer;
 }
+.btn-yellow{background:#facc15;color:#000;}
+.btn-green{background:#22c55e;color:#000;}
+.btn-blue{background:#2563eb;color:#fff;}
 
 .container {
-    max-width: 700px;
-    margin: auto;
-    padding: 15px;
+    max-width:700px;
+    margin:auto;
+    padding:15px;
 }
-
 .section {
-    border: 1px solid #facc15;
-    border-radius: 10px;
-    padding: 12px;
-    margin-bottom: 16px;
-    background: #0b0b0b;
+    border:1px solid #facc15;
+    border-radius:10px;
+    padding:12px;
+    margin-bottom:15px;
 }
-
 .section-title {
-    color: #facc15;
-    font-size: 20px;
-    margin-bottom: 10px;
-    font-weight: bold;
+    color:#facc15;
+    font-size:18px;
+    margin-bottom:8px;
 }
-
 input, select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    background: #000;
-    border: 1px solid #facc15;
-    border-radius: 6px;
-    color: #fff;
+    width:100%;
+    padding:10px;
+    margin-bottom:8px;
+    background:#000;
+    border:1px solid #facc15;
+    border-radius:6px;
+    color:#fff;
 }
-
-button {
-    width: 100%;
-    padding: 14px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.btn-yellow { background: #facc15; color: #000; }
-.btn-green { background: #22c55e; color: #000; }
-.btn-blue { background: #2563eb; color: #fff; }
-
 .total {
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-    color: #facc15;
-    margin-top: 15px;
+    text-align:center;
+    font-size:28px;
+    color:#facc15;
+    margin-top:10px;
 }
-
-.hidden { display: none; }
+.hidden {display:none;}
 </style>
 </head>
 
 <body>
 
 <header>
-    <h1>Construction Estimator</h1>
-    <div class="menu">
-        <button onclick="showPage('home')">Menu</button>
-    </div>
+<h1>Construction Estimator</h1>
+<button class="btn-yellow" onclick="showHome()">Menu</button>
 </header>
 
 <div class="container">
 
-<!-- HOME PAGE -->
+<!-- HOME -->
 <div id="home">
     <div class="section">
-        <div class="section-title">Welcome</div>
-        <p>
-            Select a service below to generate a fast, professional estimate.
-        </p>
-        <button class="btn-blue" onclick="showPage('conventional')">
-            Conventional Septic System
-        </button>
-        <button class="btn-blue" onclick="showPage('chamber')">
-            Chamber Septic System
-        </button>
-        <button class="btn-yellow" disabled>
-            Dirt Work (Coming Soon)
-        </button>
-        <button class="btn-yellow" disabled>
-            Building Pads (Coming Soon)
-        </button>
-        <button class="btn-yellow" disabled>
-            Land Clearing (Coming Soon)
-        </button>
+        <div class="section-title">Select System</div>
+        <button class="btn-blue" onclick="startSystem('conventional')">Conventional Septic</button>
+        <button class="btn-blue" onclick="startSystem('chamber')">Chamber Septic</button>
     </div>
 </div>
 
-<!-- ESTIMATOR PAGE -->
+<!-- ESTIMATOR -->
 <div id="estimator" class="hidden">
 
-    <div class="section">
-        <div class="section-title" id="systemTitle"></div>
-        <input id="customerName" placeholder="Customer Name">
-        <input id="jobLocation" placeholder="Job Location">
-    </div>
-
-    <div class="section">
-        <div class="section-title">System Details</div>
-        <input id="tankCost" type="number" placeholder="Tank Cost ($)">
-        <input id="fieldLength" type="number" placeholder="Field Line Length (ft)">
-        <input id="pipeCost" type="number" placeholder="Pipe Cost per ft ($)">
-    </div>
-
-    <div class="section">
-        <div class="section-title">Rock (Hauled In)</div>
-        <input id="rockTons" type="number" placeholder="Rock Tons">
-        <input id="rockCost" type="number" value="17" placeholder="Cost per Ton ($)">
-    </div>
-
-    <div class="section">
-        <div class="section-title">Hauling</div>
-        <input id="haulDistance" type="number" placeholder="Miles One Way">
-        <input id="haulRate" type="number" value="35" placeholder="Cents per mile">
-    </div>
-
-    <div class="section">
-        <div class="section-title">Tree Clearing (if needed)</div>
-        <input id="treeCount" type="number" placeholder="Tree Count">
-        <select id="treeSize">
-            <option value="0">Tree Size</option>
-            <option value="500">Small</option>
-            <option value="1000">Medium</option>
-            <option value="1500">Large</option>
-        </select>
-    </div>
-
-    <div class="section">
-        <div class="section-title">Labor / Site Work</div>
-        <input id="laborBase" type="number" placeholder="Total Labor Cost ($)">
-        <input id="markupPercent" type="number" placeholder="Markup %">
-    </div>
-
-    <button class="btn-yellow" onclick="calculateTotal()">CALCULATE TOTAL</button>
-    <button class="btn-green" onclick="generateCustomerQuote()">GENERATE CUSTOMER QUOTE</button>
-
-    <div class="total" id="totalOutput">$0.00</div>
+<div class="section">
+    <div class="section-title" id="systemTitle"></div>
+    <input id="customerName" placeholder="Customer Name">
+    <input id="jobLocation" placeholder="Job Location">
 </div>
 
+<div class="section">
+    <div class="section-title">System Details</div>
+    <input id="tankCost" type="number" placeholder="Tank Cost ($)">
+    <input id="fieldLength" type="number" placeholder="Field Line Length (ft)">
+    <input id="pipeCost" type="number" placeholder="Pipe Cost per ft ($)">
+</div>
+
+<div class="section">
+    <div class="section-title">Rock / Hauling</div>
+    <input id="rockTons" type="number" placeholder="Rock Tons">
+    <input id="rockCost" type="number" value="17" placeholder="Cost per Ton">
+    <input id="haulDistance" type="number" placeholder="Miles One Way">
+    <input id="haulRate" type="number" value="35" placeholder="Cents per mile">
+</div>
+
+<div class="section">
+    <div class="section-title">Tree Clearing</div>
+    <input id="treeCount" type="number" placeholder="Tree Count">
+    <select id="treeSize">
+        <option value="0">Tree Size</option>
+        <option value="500">Small</option>
+        <option value="1000">Medium</option>
+        <option value="1500">Large</option>
+    </select>
+</div>
+
+<div class="section">
+    <div class="section-title">Crew Size</div>
+    <select id="crewSize">
+        <option value="1">1 Man / 1 Machine</option>
+        <option value="2">2 Men / 2 Machines</option>
+    </select>
+</div>
+
+<div class="section">
+    <div class="section-title">Labor / Site Work</div>
+    <input id="laborBase" type="number" placeholder="Base Labor Cost">
+    <input id="markupPercent" type="number" value="22" placeholder="Markup %">
+</div>
+
+<button class="btn-yellow" onclick="calculate()">Calculate Total</button>
+<button class="btn-green" onclick="generateQuote()">Generate Customer Quote</button>
+
+<div class="total" id="totalOutput">$0.00</div>
+
+</div>
 </div>
 
 <script>
-let systemType = "conventional";
+function $(id){return document.getElementById(id);}
+function val(id){return parseFloat($(id).value)||0;}
 
-function showPage(page) {
-    document.getElementById("home").classList.add("hidden");
-    document.getElementById("estimator").classList.add("hidden");
-
-    if (page === "home") {
-        document.getElementById("home").classList.remove("hidden");
-    } else {
-        systemType = page;
-        document.getElementById("estimator").classList.remove("hidden");
-        setupSystem();
-    }
+function showHome(){
+    $("home").classList.remove("hidden");
+    $("estimator").classList.add("hidden");
 }
 
-function setupSystem() {
-    if (systemType === "conventional") {
-        document.getElementById("systemTitle").innerText = "Conventional Septic System";
-        document.getElementById("laborBase").value = 22000;
-        document.getElementById("markupPercent").value = 22;
-    } else {
-        document.getElementById("systemTitle").innerText = "Chamber Septic System";
-        document.getElementById("laborBase").value = 19000;
-        document.getElementById("markupPercent").value = 22;
-    }
+function startSystem(type){
+    $("home").classList.add("hidden");
+    $("estimator").classList.remove("hidden");
+    $("systemTitle").innerText =
+        type === "conventional" ? "Conventional Septic System" : "Chamber Septic System";
+    $("laborBase").value = type === "conventional" ? 22000 : 19000;
 }
 
-function getVal(id) {
-    return parseFloat(document.getElementById(id).value) || 0;
+function calculate(){
+    let materials =
+        val("tankCost") +
+        val("fieldLength") * val("pipeCost") +
+        val("rockTons") * val("rockCost") +
+        (val("haulDistance") * 2) * (val("haulRate")/100) +
+        val("treeCount") * val("treeSize");
+
+    let labor = val("laborBase");
+    if(val("crewSize") === 2) labor *= 1.3;
+
+    let subtotal = materials + labor;
+    let total = subtotal + (subtotal * val("markupPercent")/100);
+
+    $("totalOutput").innerText = "$" + total.toFixed(2);
+    return {materials, labor, total};
 }
 
-function calculateTotal() {
-    const total =
-        getVal("tankCost") +
-        getVal("fieldLength") * getVal("pipeCost") +
-        getVal("rockTons") * getVal("rockCost") +
-        (getVal("haulDistance") * 2) * (getVal("haulRate") / 100) +
-        getVal("treeCount") * getVal("treeSize") +
-        getVal("laborBase");
+function generateQuote(){
+    const r = calculate();
+    const total = r.total;
+    const deposit = total > 10000 ? (total * 0.15).toFixed(2) : "0.00";
+    const terms = total > 10000 ? "15% deposit required to schedule." : "Payment due upon completion.";
 
-    const markup = total * (getVal("markupPercent") / 100);
-    document.getElementById("totalOutput").innerText =
-        "$" + (total + markup).toFixed(2);
-}
+    localStorage.setItem("lastJob", JSON.stringify({
+        customer: $("customerName").value,
+        location: $("jobLocation").value,
+        total: total,
+        date: new Date().toLocaleDateString()
+    }));
 
-function generateCustomerQuote() {
-    calculateTotal();
-    const total = document.getElementById("totalOutput").innerText;
-    alert("Customer Quote Total: " + total);
+    const w = window.open("");
+    w.document.write(`
+        <h2>Crestview Construction LLC</h2>
+        <p><b>Materials:</b> $${r.materials.toFixed(2)}</p>
+        <p><b>Labor / Site Work:</b> $${r.labor.toFixed(2)}</p>
+        <h3>Total: $${total.toFixed(2)}</h3>
+        <p><b>Deposit:</b> $${deposit}</p>
+        <p>${terms}</p>
+    `);
+    w.print();
 }
 </script>
 
