--- a/index.html
+++ b/index.html
@@ -6,107 +6,177 @@
 <title>Construction Estimator</title>
 
 <style>
-body{background:#000;color:#fff;font-family:Arial;margin:0}
-header{padding:12px;border-bottom:2px solid #facc15;display:flex;justify-content:space-between}
-header h1{color:#facc15;font-size:20px;margin:0}
-.container{max-width:720px;margin:auto;padding:15px}
-.section{border:1px solid #facc15;border-radius:10px;padding:12px;margin-bottom:15px}
-.section-title{color:#facc15;font-size:18px;margin-bottom:8px}
-input,select{width:100%;padding:10px;margin-bottom:8px;background:#000;border:1px solid #facc15;color:#fff;border-radius:6px}
-button{width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;font-weight:bold;cursor:pointer}
-.btn-yellow{background:#facc15;color:#000}
-.btn-green{background:#22c55e;color:#000}
-.btn-blue{background:#2563eb;color:#fff}
-.hidden{display:none}
-.total{text-align:center;font-size:28px;color:#facc15;margin-top:10px}
+body {
+  margin:0;
+  background:#000;
+  color:#fff;
+  font-family:Arial;
+}
+
+header {
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:12px;
+  border-bottom:2px solid #facc15;
+}
+
+header h1 {
+  color:#facc15;
+  font-size:20px;
+  margin:0;
+}
+
+.container {
+  max-width:720px;
+  margin:auto;
+  padding:15px;
+}
+
+.section {
+  border:1px solid #facc15;
+  border-radius:10px;
+  padding:12px;
+  margin-bottom:15px;
+}
+
+.section-title {
+  color:#facc15;
+  font-size:18px;
+  margin-bottom:8px;
+}
+
+input, select {
+  width:100%;
+  padding:10px;
+  margin-bottom:8px;
+  background:#000;
+  border:1px solid #facc15;
+  border-radius:6px;
+  color:#fff;
+}
+
+button {
+  width:100%;
+  padding:12px;
+  margin-top:8px;
+  border:none;
+  border-radius:8px;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+.btn-yellow { background:#facc15; color:#000; }
+.btn-green { background:#22c55e; color:#000; }
+.btn-blue { background:#2563eb; color:#fff; }
+
+.total {
+  text-align:center;
+  font-size:28px;
+  color:#facc15;
+  margin-top:10px;
+}
+
+.hidden { display:none; }
 </style>
 </head>
 
 <body>
 
 <header>
-<h1>Construction Estimator</h1>
-<button class="btn-yellow" onclick="showHome()">Menu</button>
+  <h1>Construction Estimator</h1>
+  <button class="btn-yellow" onclick="showHome()">Menu</button>
 </header>
 
 <div class="container">
 
 <!-- HOME -->
 <div id="home">
-<div class="section">
-<div class="section-title">Select Estimate Type</div>
-<button class="btn-blue" onclick="startSeptic('conventional')">Conventional Septic</button>
-<button class="btn-blue" onclick="startSeptic('chamber')">Chamber Septic</button>
-<button class="btn-blue" onclick="startPad()">Building Pad</button>
-</div>
+  <div class="section">
+    <div class="section-title">Select Estimate Type</div>
+    <button class="btn-blue" onclick="openSeptic()">Septic System</button>
+    <button class="btn-blue" onclick="openPad()">Building Pad</button>
+  </div>
 </div>
 
-<!-- SEPTIC (placeholder – unchanged logic can live here later) -->
+<!-- SEPTIC ESTIMATOR -->
 <div id="septic" class="hidden">
+
 <div class="section">
-<div class="section-title">Septic Estimator</div>
-<p>(Existing septic logic remains here)</p>
-</div>
+  <div class="section-title">Septic – Job Info</div>
+  <input id="custName" placeholder="Customer Name">
+  <input id="jobLoc" placeholder="Job Location">
 </div>
 
-<!-- PAD WORK -->
+<div class="section">
+  <div class="section-title">System Details</div>
+  <input id="tankCost" type="number" placeholder="Tank Cost ($)">
+  <input id="fieldLength" type="number" placeholder="Field Line Length (ft)">
+  <input id="pipeCost" type="number" placeholder="Pipe Cost per ft ($)">
+</div>
+
+<div class="section">
+  <div class="section-title">Rock (Hauled In)</div>
+  <input id="rockTons" type="number" placeholder="Rock Tons">
+  <input id="rockCost" type="number" value="17" placeholder="Cost per Ton">
+</div>
+
+<div class="section">
+  <div class="section-title">Labor</div>
+  <select id="crew">
+    <option value="1">1 Man / 1 Machine</option>
+    <option value="1.3">2 Men / 2 Machines</option>
+  </select>
+  <input id="laborBase" type="number" placeholder="Base Labor Cost">
+  <input id="markup" type="number" value="22" placeholder="Markup %">
+</div>
+
+<button class="btn-yellow" onclick="calcSeptic()">Calculate Septic</button>
+<div class="total" id="septicTotal">$0.00</div>
+
+</div>
+
+<!-- PAD ESTIMATOR -->
 <div id="pad" class="hidden">
 
 <div class="section">
-<div class="section-title">Building Pad – Job Info</div>
-<input id="padCustomer" placeholder="Customer Name">
-<input id="padLocation" placeholder="Job Location">
+  <div class="section-title">Building Pad – Job Info</div>
+  <input id="padCust" placeholder="Customer Name">
+  <input id="padLoc" placeholder="Job Location">
 </div>
 
 <div class="section">
-<div class="section-title">Pad Dimensions</div>
-<input id="padLength" type="number" placeholder="Pad Length (ft)">
-<input id="padWidth" type="number" placeholder="Pad Width (ft)">
-<input id="padDepth" type="number" placeholder="Avg Fill Depth (inches)">
+  <div class="section-title">Pad Dimensions</div>
+  <input id="padLen" type="number" placeholder="Length (ft)">
+  <input id="padWid" type="number" placeholder="Width (ft)">
+  <input id="padDepth" type="number" placeholder="Avg Fill Depth (in)">
 </div>
 
 <div class="section">
-<div class="section-title">Cut / Fill</div>
-<select id="padDifficulty">
-<option value="1">Balanced</option>
-<option value="1.15">Mostly Cut</option>
-<option value="1.25">Mostly Fill</option>
-<option value="1.4">Steep / Heavy Work</option>
-</select>
+  <div class="section-title">Fill</div>
+  <select id="fillType">
+    <option value="0">On-site</option>
+    <option value="12">Imported Fill</option>
+    <option value="18">Structural Fill</option>
+  </select>
 </div>
 
 <div class="section">
-<div class="section-title">Fill Material</div>
-<select id="fillType">
-<option value="0">On-site (no import)</option>
-<option value="12">Imported Fill ($/yd)</option>
-<option value="18">Select / Structural Fill</option>
-</select>
+  <div class="section-title">Rock Cap</div>
+  <input id="rockIn" type="number" placeholder="Rock Thickness (in)">
 </div>
 
 <div class="section">
-<div class="section-title">Rock Cap (Optional)</div>
-<input id="rockThickness" type="number" placeholder="Rock Thickness (inches)">
-<input id="rockCostPad" type="number" value="17" placeholder="Cost per ton">
-</div>
-
-<div class="section">
-<div class="section-title">Crew Size</div>
-<select id="padCrew">
-<option value="1">1 Man / 1 Machine</option>
-<option value="1.3">2 Men / 2 Machines</option>
-</select>
-</div>
-
-<div class="section">
-<div class="section-title">Labor / Mobilization</div>
-<input id="padLabor" type="number" value="8000" placeholder="Base Labor">
-<input id="padMarkup" type="number" value="22" placeholder="Markup %">
+  <div class="section-title">Labor</div>
+  <select id="padCrew">
+    <option value="1">1 Man / 1 Machine</option>
+    <option value="1.3">2 Men / 2 Machines</option>
+  </select>
+  <input id="padLabor" type="number" value="8000">
+  <input id="padMarkup" type="number" value="22">
 </div>
 
 <button class="btn-yellow" onclick="calcPad()">Calculate Pad</button>
-<button class="btn-green" onclick="padQuote()">Generate Quote</button>
-
 <div class="total" id="padTotal">$0.00</div>
 
 </div>
@@ -114,66 +184,50 @@ button{width:100%;padding:12px;margin-top:8px;border:none;border-radius:8px;font
 </div>
 
 <script>
-function $(id){return document.getElementById(id)}
-function val(id){return parseFloat($(id).value)||0}
+const $ = id => document.getElementById(id);
+const val = id => parseFloat($(id).value) || 0;
 
-function showHome(){
-home.classList.remove("hidden")
-pad.classList.add("hidden")
-septic.classList.add("hidden")
+function showHome() {
+  home.classList.remove("hidden");
+  septic.classList.add("hidden");
+  pad.classList.add("hidden");
 }
 
-function startPad(){
-home.classList.add("hidden")
-pad.classList.remove("hidden")
-septic.classList.add("hidden")
+function openSeptic() {
+  home.classList.add("hidden");
+  septic.classList.remove("hidden");
+  pad.classList.add("hidden");
 }
 
-function startSeptic(){
-home.classList.add("hidden")
-pad.classList.add("hidden")
-septic.classList.remove("hidden")
+function openPad() {
+  home.classList.add("hidden");
+  pad.classList.remove("hidden");
+  septic.classList.add("hidden");
 }
 
-function calcPad(){
-const length = val("padLength")
-const width = val("padWidth")
-const depthFt = val("padDepth")/12
+function calcSeptic() {
+  const total =
+    val("tankCost") +
+    (val("fieldLength") * val("pipeCost")) +
+    (val("rockTons") * val("rockCost")) +
+    (val("laborBase") * val("crew"));
 
-const cubicYards = (length*width*depthFt)/27
-const fillCost = cubicYards * val("fillType")
-
-const rockFt = val("rockThickness")/12
-const rockTons = (length*width*rockFt/27)*1.4
-const rockCost = rockTons * val("rockCostPad")
-
-let labor = val("padLabor")
-labor *= val("padCrew")
-labor *= val("padDifficulty")
-
-const materials = fillCost + rockCost
-const subtotal = materials + labor
-const total = subtotal + subtotal*(val("padMarkup")/100)
-
-padTotal.innerText = "$" + total.toFixed(2)
-
-return {materials,labor,total}
+  const final = total + total * (val("markup") / 100);
+  septicTotal.innerText = "$" + final.toFixed(2);
 }
 
-function padQuote(){
-const r = calcPad()
-const deposit = r.total>10000?(r.total*0.15).toFixed(2):"0.00"
+function calcPad() {
+  const yards = (val("padLen") * val("padWid") * (val("padDepth") / 12)) / 27;
+  const fill = yards * val("fillType");
 
-const w = window.open("")
-w.document.write(`
-<h2>Building Pad Proposal</h2>
-<p><b>Materials:</b> $${r.materials.toFixed(2)}</p>
-<p><b>Labor & Equipment:</b> $${r.labor.toFixed(2)}</p>
-<h3>Total: $${r.total.toFixed(2)}</h3>
-<p><b>Deposit:</b> $${deposit}</p>
-<p>Pad constructed to structural standards and compacted in lifts suitable for foundation.</p>
-`)
-w.print()
+  const rockTons = ((val("padLen") * val("padWid") * (val("rockIn") / 12)) / 27) * 1.4;
+  const rock = rockTons * 17;
+
+  let labor = val("padLabor") * val("padCrew");
+  const subtotal = fill + rock + labor;
+  const final = subtotal + subtotal * (val("padMarkup") / 100);
+
+  padTotal.innerText = "$" + final.toFixed(2);
 }
 </script>
 
